--- a/DemoApp/DemoApp.UserInterface/Siemens.Mom.Presales.Training.DemoApp/resources/Siemens.Mom.Presales.Training.DemoApp.en-US.json
+++ b/DemoApp/DemoApp.UserInterface/Siemens.Mom.Presales.Training.DemoApp/resources/Siemens.Mom.Presales.Training.DemoApp.en-US.json
@@ -8,6 +8,12 @@
         "Edit":"Edit Page",
         "Team":"Team Page",
         "Save":"Confirm",
-        "Cancel":"Cancel"
+        "Cancel":"Cancel",
+        "addToTeamTitle":"Add Person To Team",
+        "Pserson":{
+            "FirstName":"FirstName",
+            "LastName":"LastName"
+        }
+
     }
 }
